--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -390,6 +390,64 @@
 %img(src='/lesson009/z009.png')
 
 %p I clicked the blue-button: "Deploy".
+%p I saw this:
+
+%img(src='/lesson009/z010.png')
+
+%p I clicked the link:
+
+%p "Select existing Google Container Registry image"
+
+%p I saw this:
+
+%img(src='/lesson009/z011.png')
+
+%p I selected: "gcr.io/pubsub-197323/dock1804"
+
+%p I saw this:
+
+%img(src='/lesson009/z012.png')
+
+%p Near the page-bottom I selected the cluster I wanted to deploy to.
+
+%p I clicked the blue-button at the bottom: "Deploy".
+
+%p I saw this:
+
+%img(src='/lesson009/z013.png')
+%br/
+%img(src='/lesson009/z014.png')
+
+%p I returned to the cluster-2-shell which encountered the docker-run failure.
+
+%p I tried to run docker again with this shell command:
+
+.syntax
+  %pre
+    %code sudo docker run -it gcr.io/pubsub-197323/dock1804 /bin/bash
+
+%p It worked!
+
+%p I saw this:
+
+.syntax
+  %pre
+    %code
+      bikle101@gke-cluster-2-default-pool-f82190b0-cdlk:~$ 
+      bikle101@gke-cluster-2-default-pool-f82190b0-cdlk:~$ sudo docker run -it gcr.io/pubsub-197323/dock1804 /bin/bash
+      root@f31e1f48b430:/# 
+      root@f31e1f48b430:/# cat /etc/lsb-release 
+      DISTRIB_ID=Ubuntu
+      DISTRIB_RELEASE=18.04
+      DISTRIB_CODENAME=bionic
+      DISTRIB_DESCRIPTION="Ubuntu Bionic Beaver (development branch)"
+      root@f31e1f48b430:/# 
+      root@f31e1f48b430:/# 
+      root@f31e1f48b430:/# exit
+      exit
+      bikle101@gke-cluster-2-default-pool-f82190b0-cdlk:~$ 
+      bikle101@gke-cluster-2-default-pool-f82190b0-cdlk:~$ 
+      bikle101@gke-cluster-2-default-pool-f82190b0-cdlk:~$     
 
 %p Getting docker images from gcr.io and then running them is an important step.
 
@@ -399,7 +457,7 @@
 
 %p Next, I exited the node-shell.
   
-%p Finally I deleted the cluster from a link in this URL:
+%p Finally I deleted clusters from a link in this URL:
 %p
   %a(href='https://console.cloud.google.com/kubernetes' target='x')
     https://console.cloud.google.com/kubernetes
@@ -490,7 +548,10 @@
         %code
           gcloud config set project pubsub-197323
           sudo docker run -it gcr.io/pubsub-197323/dock1804 /bin/bash
-          
+  %li Understand how to Deploy an image in gcr.io to a cluster using a page in the kubernetes URL:
+  %li
+    %a(href='https://console.cloud.google.com/kubernetes/workload ' target='x')
+      https://console.cloud.google.com/kubernetes/workload
   %li Delete the cluster to limit GCP cost         
           
 %p
