--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -417,7 +417,7 @@
 %img(src='/lesson009/z013.png')
 %br/
 %img(src='/lesson009/z014.png')
-
+%p I ignored the red-warnings in the above page.
 %p I returned to the cluster-2-shell which encountered the docker-run failure.
 
 %p I tried to run docker again with this shell command:
