--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -348,6 +348,7 @@
       gcloud projects list
       gcloud config set project pubsub-197323
       sudo docker tag dock1804 gcr.io/pubsub-197323/dock1804
+      gcloud docker
       sudo docker -- push gcr.io/pubsub-197323/dock1804
 
 %p I tried this:
