--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -554,7 +554,24 @@
     %a(href='https://console.cloud.google.com/kubernetes/workload ' target='x')
       https://console.cloud.google.com/kubernetes/workload
   %li Delete the cluster to limit GCP cost         
-          
+
+%h2 Questions/Answers
+
+%ul
+  %li Q: What is Docker?
+  %li Docker allows me to create a command-line linux environment inside another host.
+
+  %li Q: Is it easy to install Docker?
+  %li Sometimes yes or no. Installing Docker on windows can be a problem.
+
+  %li Q: How to get a free GCP account with $300 credit?
+  %li Start here:
+  %li
+    %a(href='https://console.developers.google.com/freetrial' target='x')
+      https://console.developers.google.com/freetrial
+
+
+
 %p
   %a(href='#top') [top]
 %hr/
