--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -582,6 +582,19 @@
   %li
     Google wants you to create a project.
     %hr/
+  %li Q: Why add an ssh-key to a project?
+  %li
+    You can then ssh into any GCP instance which gets created later.
+    %hr/
+  %li Q: How to add an ssh-key to a project?
+  %li Visit:
+  %li
+    %a(href='https://console.cloud.google.com/compute/metadata/sshKeys' target='x')
+      https://console.cloud.google.com/compute/metadata/sshKeys
+  %li Click edit button; Click Add item.
+  %li
+    Copy/Paste key into empty text-area-box; Save.  
+    %hr/
   %li Q: How to create GCP Kubernetes Cluster of 1 Node?
   %li
     Visit:
