--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -568,7 +568,9 @@
     %hr/
 
   %li Q: How to get a free GCP account with $300 credit?
-  %li Start here:
+  %li Get a credit-card.
+  %li Login to gmail.com
+  %li Then start here:
   %li
     %a(href='https://console.developers.google.com/freetrial' target='x')
       https://console.developers.google.com/freetrial
