--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -711,6 +711,29 @@
           sudo docker -- push gcr.io/pubsub-197323/dock1804
     %hr/
 
+  %li Q: How to deploy dock1804-Image to another node in GCP?
+  %li
+    Visit:
+  %li
+    %a(href='https://console.cloud.google.com/kubernetes/workload    ' target='x')
+      https://console.cloud.google.com/kubernetes/workload
+  %li Find dock1804 in the form.
+  %li Pick the target-cluster.
+  %li
+    Click blue-button: "Deploy"; ignore the warnings.
+    %hr/
+  %li Q: After I finish a training session, should I delete my cluster?
+  %li Yes!
+  %li Visit:
+  %li
+    %a(href='https://console.cloud.google.com/kubernetes' target='x')
+      https://console.cloud.google.com/kubernetes
+  %li
+    Find the cluster, click the trash-can.
+    %hr/
+
+
+
 %p
   %a(href='#top') [top]
 %hr/
