--- a/app/views/layouts/_links_bottom.html.haml
+++ b/app/views/layouts/_links_bottom.html.haml
@@ -6,4 +6,4 @@
 %a(href='/home/links') Links
 %a(href='https://meetup.com/cs101a' target='x') Meetup
 %a(href='/lessons') Lessons
-
+%a(href='https://groups.google.com/forum/#!forum/dan101') Dan101-Forum
