--- a/app/views/layouts/_links_top.html.haml
+++ b/app/views/layouts/_links_top.html.haml
@@ -7,4 +7,4 @@ Computer Science 101
 %a(href='/home/links') Links
 %a(href='https://meetup.com/cs101a' target='x') Meetup
 %a(href='/lessons') Lessons
-
+%a(href='https://groups.google.com/forum/#!forum/dan101') Dan101-Forum
