--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -12,7 +12,8 @@
   %li
     %a(href='/lessons/lesson005') Lesson 005 [ Distributed Python with GCP Pub/Sub ]
   %li  Lesson 006 [ Under Construction ]
-  %li  Lesson 007 [ Under Construction ]
+  %li
+    %a(href='/lessons/lesson007') Lesson 007 [ Google Machine Learning Crash Course ]
   %li  Lesson 008 [ Under Construction ]
   %li
     %a(href='/lessons/lesson009') Lesson 009 [ Simple Docker Introductory Tutorial ]
