--- a/app/views/lessons/_lesson07a.erb
+++ b/app/views/lessons/_lesson07a.erb
@@ -63,6 +63,18 @@ cities
 cities['Is wide and has saint name'] = (cities['Area square miles'] > 50) & cities['City name'].apply(lambda name: name.startswith('San'))
 cities
 
+# Lets try some alternative syntax
+pred1_sr = cities['Area square miles'] > 50
+pred2_sr = cities['City name'].str.startswith('San')
+pred3_sr = pred1_sr & pred2_sr
+cities['wide_saintly'] = pred3_sr
+
+# Demo a boolean-filter-idea using loc[]:
+cities.loc[pred3_sr]
+
+# Demo an integer-filter-idea:
+cities.iloc[[1,1,0,0,2,2]]
+
 
 city_names.index
 
