--- a/app/views/lessons/_lesson07a.erb
+++ b/app/views/lessons/_lesson07a.erb
@@ -72,7 +72,7 @@ cities['wide_saintly'] = pred3_sr
 # Demo a boolean-filter-idea using loc[]:
 cities.loc[pred3_sr]
 
-# Demo an integer-filter-idea:
+# Demo an integer-filter-idea using iloc[]:
 cities.iloc[[1,1,0,0,2,2]]
 
 
