--- a/app/views/lessons/lesson007.html.haml
+++ b/app/views/lessons/lesson007.html.haml
@@ -25,6 +25,47 @@
   %pre
     =render 'lesson07a'
 
+%p Next, I studied this section:
+%p
+  %a(href='https://developers.google.com/machine-learning/crash-course/prereqs-and-prework#low-level-tensorflow-basics' target='x')
+    https://developers.google.com/machine-learning/crash-course/prereqs-and-prework#low-level-tensorflow-basics
+
+%p Next, I studied this page:
+
+%p
+  %a(href='https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator' target='x')
+    https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator
+
+%p Early, during that study, I studied this page:
+
+%p
+  %a(href='https://www.github.com/tensorflow/tensorflow/blob/r1.7/tensorflow/python/estimator/estimator.py' target='x')
+    https://www.github.com/tensorflow/tensorflow/blob/r1.7/tensorflow/python/estimator/estimator.py
+
+%p Next, I sent a question to Google:
+%p
+  %a(href='https://www.google.com/search?q=In+Machine+Learning+what+is+an+estimator' target='x')
+    https://www.google.com/search?q=In+Machine+Learning+what+is+an+estimator
+
+%p I found some answers I like:
+%ul
+  %li
+    %a(href='https://stats.stackexchange.com/questions/103475/classifier-vs-model-vs-estimator' target='x')
+      https://stats.stackexchange.com/questions/103475/classifier-vs-model-vs-estimator
+  %li
+    %a(href='https://www.quora.com/Whats-the-difference-between-learning-and-estimation-in-machine-learning' target='x')
+      https://www.quora.com/Whats-the-difference-between-learning-and-estimation-in-machine-learning
+  %li
+    %a(href='https://www.datasciencecentral.com/profiles/blogs/6448529:BlogPost:570512' target='x')
+      https://www.datasciencecentral.com/profiles/blogs/6448529:BlogPost:570512
+  %li
+    %a(href='https://towardsdatascience.com/plain-and-simple-estimators-d8d3f4c185c1' target='x')
+      https://towardsdatascience.com/plain-and-simple-estimators-d8d3f4c185c1
+  %li
+    %a(href='http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html' target='x')
+      http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html
+  
+
 %p To be continued ...
 
 
