--- a/app/views/lessons/lesson007.html.haml
+++ b/app/views/lessons/lesson007.html.haml
@@ -35,8 +35,22 @@
 %p
   %a(href='https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator' target='x')
     https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator
+%p The above page led me to some questions:
 
-%p Early, during that study, I studied this page:
+%ul
+  %li
+    The estimator wraps a model, what does that mean?
+  %li
+    How to use an estimator to wrap a straight-line linear model?
+  %li
+    What is a checkpoint?
+  %li
+    What are Hyperparameters?
+
+
+
+
+%p Also, during that study, I studied this page:
 
 %p
   %a(href='https://www.github.com/tensorflow/tensorflow/blob/r1.7/tensorflow/python/estimator/estimator.py' target='x')
