--- a/app/views/lessons/lesson007.html.haml
+++ b/app/views/lessons/lesson007.html.haml
@@ -46,8 +46,16 @@
     What is a checkpoint?
   %li
     What are Hyperparameters?
-
-
+  %li
+    What is eager execution and why Estimators are not compatible with eager execution?
+  %li
+    What does it mean to "warm-start" an estimator?
+  %li
+    Can I run this syntax in colab?:
+  %li
+    .syntax
+      %pre
+        =render ''
 
 
 %p Also, during that study, I studied this page:
