--- a/app/views/lessons/lesson007.html.haml
+++ b/app/views/lessons/lesson007.html.haml
@@ -55,7 +55,7 @@
   %li
     .syntax
       %pre
-        =render ''
+        =render 'lesson007a1'
 
 
 %p Also, during that study, I studied this page:
