--- a/app/views/lessons/_lesson007a1.erb
+++ b/app/views/lessons/_lesson007a1.erb
@@ -7,5 +7,5 @@ https://www.tensorflow.org/api_docs/python/tf/estimator/Estimator
 estimator = tf.estimator.DNNClassifier(
     feature_columns=[categorical_feature_a_emb, categorical_feature_b_emb],
     hidden_units=[1024, 512, 256],
-    warm_start_from="/path/to/checkpoint/dir")
+    warm_start_from="/tmp/checkpoint_dir")
 </code>
