--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -1,5 +1,11 @@
 %h1#top Lesson 010 [ Simple AWS CLI Intro. ]
 
+%p AWS CLI is short for Amazon Web Services Command Line Interface.
+
+%p Developers often use the web-UI when interacting with AWS.
+
+%p AWS CLI is useful for developers who want to automate interactions with AWS.
+
 %p This lesson shows how I worked some simple AWS CLI tasks.
 
 
