--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -9,3 +9,12 @@
 %p This lesson shows how I worked some simple AWS CLI tasks.
 
 
+
+%p To start, I must Sign-Up for an AWS account.
+
+%p I see a Sign-Up button at this URL:
+
+%a(href='https://aws.amazon.com' target='x')
+  https://aws.amazon.com
+  
+
