--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -16,5 +16,11 @@
 
 %a(href='https://aws.amazon.com' target='x')
   https://aws.amazon.com
-  
 
+%p There, using a link in the upper right, I set my region to Oregon.
+
+%p I know that the Oregon region also has these names:
+%ul
+  %li Oregon
+  %li US West (Oregon)
+  %li us-west-2
