--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -24,3 +24,21 @@
   %li Oregon
   %li US West (Oregon)
   %li us-west-2
+
+%p The last name, us-west-2, is important for me to remember.
+
+%p Another region I like is this:
+%ul
+  %li Ohio
+  %li US East (Ohio)
+  %li us-east-2
+
+%p I like Oregon and Ohio because I assume those data centers have less competition for resources.
+
+%p I, however, have no proof that is true.
+
+%p After I set my region to us-west-2, I visit this URL again:
+
+%a(href='https://console.aws.amazon.com/ec2' target='x')
+  https://console.aws.amazon.com/ec2
+  
