--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -2,7 +2,9 @@
 
 %p AWS CLI is short for Amazon Web Services Command Line Interface.
 
-%p Developers often use the web-UI when interacting with AWS.
+%p Developers often use the web-UI when interacting with AWS:
+
+%img(src='/lesson010/z010.png')
 
 %p AWS CLI is useful for developers who want to automate interactions with AWS.
 
