--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -6,11 +6,14 @@
 
 %img(src='/lesson010/z010.png')
 
-%p AWS CLI is useful for developers who want to automate interactions with AWS.
+%hr/
+%p AWS CLI is useful for developers who want to automate interactions with AWS:
 
+%a(href='https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-welcome.html' target='x')
+  %img(src='/lesson010/z011.png')
+
+%hr/
 %p This lesson shows how I worked some simple AWS CLI tasks.
-
-
 
 %p To start, I must Sign-Up for an AWS account.
 
